Tue Jul  2 09:46:01 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * Merge from HEAD:
    + scripts/dpkg-genchanges.pl: Add ~ to the list of legal characters
      in a package filename
    + scripts/dpkg-checkbuilddeps.pl: remove forced check for build-essential,
      we should not hardcode Debian policy into dpkg

Tue Jul  2 09:41:44 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * debian/control: sync dpkg and dpkg-static dependencies, fix double
    conflict for dpkg

Tue Jul  2 01:04:29 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: Don't always call autoheader during build.

Mon Jul  1 14:45:11 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * debian/control: add conflict with dpkg-iasearch which intruded on
    our namespace and replace manpages-de which includes one of our manpages

Fri Jun 21 21:53:24 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * debian/dpkg.postinst: Merge patch from Josip Rodin to improve
    the move from /usr/info to /usr/share/info

Fri Jun 21 21:11:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * po/ca.po: Updated

Fri Jun 21 19:09:38 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * scripts/dpkg-genchanges.pl: Handle substvars in the Binary field

Thu Jun 20 00:54:54 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Fix broken merge from 1.9 branch.

Sat Jun  1 23:22:19 CDT 2002 Adam Heath <doogie@debian.org>

  * dpkg-deb/main.c, main/main.c, main/query.c, dselect/main.cc,
    split/main.c: Revert last modification.  It'll be fixed properly for
    dpkg 1.11.

Sat Jun  1 16:45:13 CDT 2002 Adam Heath <doogie@debian.org>

  * dpkg-deb/main.c, main/main.c, main/query.c, dselect/main.cc,
    split/main.c: Fixed printversion(), to allow translations to be done
    better.

Sat Jun  1 16:17:59 CDT 2002 Adam Heath <doogie@debian.org>

  * po/pt_BR.po: Updated.

Sat Jun  1 22:04:02 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
