@@ -123,6 +123,12 @@ binary-dpkg-most binary-dpkg-static-most: binary-dpkg%-most: stamp-binary%
 				cp -a $(INSTALL_TMP)/usr/share/man/$$i/man1/$$m $(TMP_DPKG)/usr/share/man/$$i/man1/$$m ; \
 			fi ; \
 		done ; \
+		install -d -m 755 -o root -g root $(TMP_DPKG)/usr/share/man/$$i/man5 ; \
+		for m in dpkg.cfg.5  dselect.cfg.5 ; do \
+			if [ -f $(INSTALL_TMP)/usr/share/man/$$i/man5/$$m ] ; then \
+				cp -a $(INSTALL_TMP)/usr/share/man/$$i/man5/$$m $(TMP_DPKG)/usr/share/man/$$i/man1/$$m ; \
+			fi ; \
+		done ; \
 		install -d -m 755 -o root -g root $(TMP_DPKG)/usr/share/man/$$i/man8 ; \
 		for m in dpkg.8 dpkg-query.8 dpkg-split.8 start-stop-daemon.8 \
 		    	cleanup-info.8 dpkg-divert.8 dpkg-statoverride.8 \
