@@ -9,6 +9,7 @@ dpkg (1.10.1) unstable; urgency=low
     not hardcode Debian policy.
   * Make dpkg-genchanges accept ~ as part of a package filename.
     Closes: Bug#150739
+  * Move dpkg.cfg and dselect.cfg manpages into dpkg package. Closes: Bug#132901
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
