@@ -1,3 +1,7 @@
+Tue Jul  2 09:52:41 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/rules: move dpkg.cfg.5 and dselect.cfg.5 into dpkg package
+
 Tue Jul  2 09:46:01 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * Merge from HEAD:
